--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cat Blog</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
+    <div class="document">
+        <h1 class="text1">Самые красивые кошки в мире</h1>
+        <p class="text2">Кошки — уникальные животные. Независимые и самолюбивые от природы, они могут быть очень<br>
+           домашними — ласковыми и послушными. Из более 70 пород выделить самых красивых и<br>
+           интересных очень сложно, ведь красота, как известно, в глазах смотрящего. Тем не менее мы <br>
+           собрали коллекцию фото красивых кошечек, которых считают эталоном не только любители <br>
+           домашних животных, но и эксперты международных фелинологических организаций.</p>
+        
+
+    </div>
+    <div class="cat">
+        <img src="/image/Getting-A.jpg">
+    </div>
     
+
 </body>
 </html>
