fix: refactor styles css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Blog</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -29,15 +29,15 @@
            домашних животных, но и эксперты международных фелинологических организаций.</p>
     </div>
     <div class="cat">
-        <img class="image-bicat" src="/image/Getting-A.jpg">
+        <img class="image-bicat" src="./image/Getting-A.jpg">
     </div>
 
     <div class="cat_block">
         <h1 class="ad">1.Абиссинская кошка</h1>
         <div class="imagecat"> 
-            <img class="cat1" src="/image/abisinskaya-1.jpg"> 
-            <img class="cat1"  src="/image/abisinskaya-2.jpg">
-            <img class="cat1"  src="/image/abisinskaya-3.jpg">
+            <img class="cat1" src="./image/abisinskaya-1.jpg"> 
+            <img class="cat1"  src="./image/abisinskaya-2.jpg">
+            <img class="cat1"  src="./image/abisinskaya-3.jpg">
         </div>
         <p class="text-1">Эта порода, выведенная в Великобритании, — одна из самых древних в мире. Её прародители были родом из Африки и Юго-Восточной <br>
            Азии. За интересную экзотическую внешность, напоминающую животных с древнеегипетских фресок, и сияющий окрас их иногда<br>
